# enarx-keepldr

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: lint.yml  test.yml
internal/sallyport/: Cargo.toml
internal/sgx-heap/: Cargo.toml
internal/shim-sev/: Cargo.toml  build.rs  layout.ld
internal/shim-sev/src/: addr.rs  allocator.rs  debug.rs  idt.rs  interrupts.rs  main.rs  payload.rs  print.rs  start.rs  syscall.rs
internal/shim-sev/src/snp/: cpuid_page.rs  ghcb.rs  mod.rs
internal/shim-sgx/: Cargo.toml
internal/shim-sgx/src/: enclave.rs  event.rs  handler.rs  main.rs  spin.rs
internal/syscall/: Cargo.toml
internal/syscall/src/: base.rs  fdhandle.rs  file.rs  lib.rs  memory.rs  network.rs
internal/untrusted/: Cargo.toml
internal/untrusted/src/: lib.rs
src/: lib.rs  main.rs
src/backend/: mod.rs
src/backend/kvm/: builder.rs  config.rs  mod.rs  thread.rs
src/backend/sev/: builder.rs  cpuid_page.rs  mod.rs
src/backend/sgx/: builder.rs  mod.rs
src/binary/: component.rs  mod.rs
src/netlink/: address.rs  connection.rs  interface.rs  mod.rs  subnet.rs
src/sallyport/: mod.rs
tests/: integration_tests.rs
tests/common/: mod.rs
