[package]
name = "enarx-keepldr"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>", "Mike Bursell <mike@p2ptrust.org>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"
homepage = "https://github.com/enarx/enarx-keepldr"
repository = "https://github.com/enarx/enarx-keepldr"
description = "Enarx Keep Loader"
readme = "README.md"
keywords = ["sgx", "sev", "kvm", "tee"]
categories = ["os", "os::linux-apis", "network-programming", "hardware-support"]
exclude = [ ".gitignore", ".github/*" ]
include = [ "src", "internal" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/enarx-keepldr", workflow = "test" }
#github = { repository = "enarx/enarx-keepldr", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/enarx-keepldr" }
is-it-maintained-open-issues = { repository = "enarx/enarx-keepldr" }

[dependencies]
sgx = { git = "https://github.com/enarx/sgx", rev = "512e077", features = ["asm", "crypto"] }
x86_64 = { version = "0.11", default-features = false, features = ["stable"] }
kvm-bindings = "0.3"
kvm-ioctls = "0.5"
primordial = "0.1"
structopt = "0.3"
colorful = "0.2"
mmarinus = "0.2"
nbytes = "0.1"
anyhow = "1.0"
goblin = "0.2"
libc = "0.2"
lset = "0.1"
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", features = ["tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
wait-timeout = "0.1"
